saturn-utxo-parser-derive/tests/compile_fail/missing_anchor.stderr
error[E0609]: no field `missing` on type `&DummyAccounts<'info2>`
  --> tests/compile_fail/missing_anchor.rs:25:21
   |
25 |     #[utxo(anchor = missing)]
   |                     ^^^^^^^ unknown field
   |
   = note: available field is: `acc`
